git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/regal/trunk/src/jessy@2033 334080fa-30e0-4884-a663-39494f8d70c4